<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/trip_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move"
            android:textSize="30sp"
            android:textColor="@android:color/darker_gray"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_date"
                    android:text="19/12/2019 2:30pm"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/uber_move"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uber_move"
                    android:textColor="@android:color/black"
                    android:text="$80.11"/>



            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:src="@drawable/round"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_origin"
                        android:layout_marginLeft="10dp"
                        android:text="@string/demo_address"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="@font/uber_move"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="#A9A9A9"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/rectangle"/>

                    <TextView
                        android:id="@+id/txt_destination"
                        android:layout_marginLeft="10dp"
                        android:text="@string/address_demo"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="@font/uber_move"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@android:color/darker_gray"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uber_move"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:text="Receipt"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/uber_move"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:text="uberX Receipt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/base_fare"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/uber_move"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_base_fare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uber_move"
                    android:textColor="@android:color/black"
                    android:text="$80.11"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/distance"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/uber_move"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_distance"
                    android:text="$80.11"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/uber_move"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/uber_move"
                    android:text="Time"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/uber_move"
                    android:text="$80.11"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </FrameLayout>

</LinearLayout>